# ros2_robot_sim

./: .gitignore  README.md  README_项目进度.md  frames_2026-05-22_02.33.15.gv  start.sh  stop.sh  第一阶段_功能测试与验收.md  阿克曼转向修复方案.md
.backup_2d_lidar/launch/: robot_simulation.launch.py
.backup_2d_lidar/robot_description/urdf/: robot_base.urdf.xacro
.backup_2d_lidar/rviz/: robot_config.rviz
config/: ackermann_robot_controllers.yaml  fast_lio.yaml  lio_sam.yaml  localization.yaml  localization_modes.yaml  navigation.yaml  remote_extension.yaml  sensor_mount.yaml  vehicle_geometry.yaml
docs/: CLAUDE_CODE_HANDOFF.md  NEW_UBUNTU_MIGRATION_RUNBOOK.md
docs/superpowers/plans/: 2026-05-11-ackermann-drive-controller.md  2026-05-19-real-ackermann-drive.md  2026-05-20-fast-lio2-fusion-nav2.md  2026-05-20-lio-sam2-localization-nav2.md
docs/superpowers/specs/: 2026-05-11-ackermann-drive-controller-design.md  2026-05-19-real-ackermann-drive-design.md  2026-05-20-fast-lio2-fusion-nav2-design.md  2026-05-20-gps-degradation-test-scenarios.md  2026-05-20-lio-sam2-localization-nav2-design.md  2026-05-20-rl-ros2-robot-design.md
launch/: fast_lio2.launch.py  lio_sam2.launch.py  localization.launch.py  navigation.launch.py  robot_simulation.launch.py  sensing_bridge.launch.py  slam_navigation.launch.py
maps/: barn_corridor_sim_001.pgm  barn_corridor_sim_001.yaml
rviz/: robot_config.rviz
scripts/: accumulate_lio_map.py  cmd_vel_forwarder.py  export_lio_map_to_occupancy.py  global_localization_backend.py  install_dependencies.sh  install_fast_lio2_source.sh  install_ros2_humble.sh  lidar_self_filter.py  lio_tf_adapter.py  lio_wheel_fusion.py  localization_mode_manager.py  sensing_relay.py  verify_fast_lio2_precheck.sh  verify_global_localization_runtime.sh  verify_lidar_mount.sh  verify_localization.sh  verify_localization_modes.sh  verify_navigation_precheck.sh  verify_runtime_topics.sh  verify_saved_map_nav2_precheck.sh
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/environment/: gazebo_plugin_path.sh.in
src/robot_description/src/: ackermann_drive_controller.cpp  wheel_encoder.cpp
src/robot_description/test/: ackermann_math_reference.py  test_ackermann_kinematics.py  test_wheel_encoder_integration.py
src/robot_description/urdf/: robot_base.urdf.xacro
worlds/: corridor_tunnel.world  office.world  office_campus.world
